# near-optimal-lawn-mowing-tours

./: .gitignore  CMakeLists.txt  LICENSE  README.md  approximation.cpp  conanfile.txt  lower_bounds.cpp  run_approx_experiment.py  run_experiment.py  run_lb_experiment.py  run_solve_from_lb_experiment.py
approximation/: CMakeLists.txt
approximation/include/approximation/: FeketeApproximation.h
approximation/src/: FeketeApproximation.cpp
apps/: CMakeLists.txt  lower_bounds.cpp  solve_from_lb_solution.cpp
close_enough_tsp/: CMakeLists.txt
close_enough_tsp/include/cetsp/: callbacks.h  common.h  node.h  relaxed_solution.h  soc.h  solver.h
close_enough_tsp/include/cetsp/details/: convex_hull_order.h  cross_lower_bound.h  distance_cache.h  lazy_trajectory.h  solution_pool.h  triple_map.h
close_enough_tsp/include/cetsp/strategies/: branching_strategy.h  root_node_strategy.h  rule.h  search_strategy.h
close_enough_tsp/include/cetsp/strategies/rules/: global_convex_hull_rule.h  layered_convex_hull_rule.h
close_enough_tsp/include/close_enough_tsp/: BranchNBound.h  CETSPSolver.h  Data.h  PrintFunctions.h  ShortestPathSolver.h  SolveSocpCplex.h  constants.h  structs.h  util.h
close_enough_tsp/src/: BranchNBound.cpp  CETSPSolver.cpp  Data.cpp  PrintFunctions.cpp  ShortestPathSolver.cpp  SolveSocpCplex.cpp  convex_hull_order.cpp  geometry.cpp  node.cpp  util.cpp
cmake/: FindCPLEX.cmake  FindGUROBI.cmake  README.md  get_git_revision.cmake  get_svn_revision.cmake  shared_library_util.h  util.cmake
evaluation/: 01_run_lb_experiment.py
evaluation/utils/: __init__.py  parser.py
include/algutil/: upper_triagular_indexing.hpp  utility.hpp
include/cetsp/: bnb.h  common.h  heuristics.h  node.h  relaxed_solution.h  soc.h
include/mowing/: ExactOffsetCalculator.h  MowingSolverWithUpperBound.h
include/tsp/: TSPSolver.h
include/utils/: export.hpp  import.hpp  json_helper.h  polygons.hpp  tours.hpp  utils.hpp
instances/fpg/: fpg-poly_0000000010.poly  fpg-poly_0000000050.poly  fpg-poly_0000000090.poly  fpg-poly_0000000100.poly  fpg-poly_0000000300.poly  fpg-poly_0000000400.poly  fpg-poly_0000000500.poly  fpg-poly_0000000600.poly  fpg-poly_0000000700.poly  fpg-poly_0000000900.poly  fpg-poly_0000001000.poly  fpg-poly_0000001100.poly  fpg-poly_0000001200.poly  fpg-poly_0000001600.poly  fpg-poly_0000001800.poly  fpg-poly_0000001900.poly
instances/small/: srpg_iso0000119.poly  srpg_iso0000147.poly  srpg_iso0000225.poly  srpg_iso0000239.poly  srpg_iso0000241.poly  srpg_iso0000275.poly  srpg_iso0000279.poly  srpg_octa0000121.poly  srpg_octa0000126.poly  srpg_octa0000128.poly  srpg_octa0000134.poly  srpg_octa0000145.poly  srpg_octa0000146.poly  srpg_octa0000168.poly  srpg_octa0000184.poly  srpg_octa0000190.poly  srpg_octa0000194.poly  srpg_octa0000219.poly  srpg_octa0000233.poly  srpg_octa0000246.poly  srpg_octa0000260.poly  srpg_octa0000263.poly  srpg_octa0000275.poly  srpg_octa0000297.poly
instances/spg-a-2opt/: spg-a-poly_0000030_1.poly  spg-a-poly_0000030_2.poly  spg-a-poly_0000040_1.poly  spg-a-poly_0000040_2.poly  spg-a-poly_0000050_1.poly  spg-a-poly_0000050_2.poly  spg-a-poly_0000050_3.poly  spg-a-poly_0000060_2.poly  spg-a-poly_0000070_2.poly  spg-a-poly_0000070_3.poly  spg-a-poly_0000080_2.poly  spg-a-poly_0000080_3.poly  spg-a-poly_0000090_2.poly  spg-a-poly_0000090_3.poly  spg-a-poly_0000200_1.poly  spg-a-poly_0000200_2.poly  spg-a-poly_0000300_1.poly  spg-a-poly_0000300_3.poly  spg-a-poly_0000400_1.poly  spg-a-poly_0000500_1.poly  spg-a-poly_0000500_2.poly  spg-a-poly_0000500_3.poly  spg-a-poly_0000600_1.poly  spg-a-poly_0000600_2.poly  spg-a-poly_0000600_3.poly  spg-a-poly_0000700_3.poly  spg-a-poly_0000800_3.poly  spg-a-poly_0000900_1.poly
instances/spg-c-alg6/: spg-c-poly_0000010_1.poly  spg-c-poly_0000030_1.poly  spg-c-poly_0000050_1.poly  spg-c-poly_0000050_2.poly  spg-c-poly_0000060_1.poly  spg-c-poly_0000060_2.poly  spg-c-poly_0000070_2.poly  spg-c-poly_0000090_1.poly  spg-c-poly_0000090_2.poly  spg-c-poly_0000100_1.poly  spg-c-poly_0000100_2.poly  spg-c-poly_0000200_1.poly  spg-c-poly_0000300_1.poly  spg-c-poly_0000400_1.poly  spg-c-poly_0000500_1.poly  spg-c-poly_0000500_2.poly  spg-c-poly_0000800_2.poly
instances/srpg_iso/: srpg_iso0000027.poly  srpg_iso0000065.poly  srpg_iso0000071.poly  (+72 more)
mowing/: CMakeLists.txt
mowing/include/mowing/: ExactOffsetCalculator.h  FeasibleToursFromLowerBound.h  LowerBoundSolver.h  MowingSolver.h
mowing/include/mowing/utils/: cetsp_tours.h  definitions.h  mowing.h
mowing/include/mowing/witnesses/placement/: WitnessPlacementStrategy.h
mowing/include/mowing/witnesses/placement/followup/: RandomPlacementStrategy.h  StraightSkeletonPlacementStrategy.h
mowing/src/: ExactOffsetCalculator.cpp  FeasibleToursFromLowerBound.cpp  LowerBoundSolver.cpp  MowingSolver.cpp  MowingSolverWithUpperBound.cpp
mowing/src/utils/: conversion.cpp  mowing.cpp
mowing/src/witnesses/placement/: WitnessPlacementStrategy.cpp
mowing/src/witnesses/placement/followup/: GridPlacementStrategy.cpp  RandomPlacementStrategy.cpp
mowing/src/witnesses/sparsification/: DispersionSparsification.cpp
src/: CMakeLists.txt
src/close_enough_tsp/: CMakeLists.txt  branching_strategy.cpp  heuristics.cpp  relaxed_solution.cpp  soc.cpp
src/close_enough_tsp/branching_strategies/: global_convex_hull.cpp  layered_convex_hull_rule.cpp
src/close_enough_tsp/root_node_strategies/: convex_hull_root.cpp  longest_edge_plus_farthest_circle.cpp
src/mowing/: CMakeLists.txt  MowingSolverWithUpperBound.cpp  _mowing_bindings.cpp
src/mowing/utils/: cetsp_tours.cpp  conversion.cpp
src/mowing/witnesses/placement/followup/: StraightSkeletonPlacementStrategy.cpp
src/mowing/witnesses/placement/initial/: ConvexHullPlacementStrategy.cpp  PolygonVerticesPlacementStrategy.cpp
src/mowing/witnesses/sparsification/: DispersionSparsification.cpp  KMeansSparsification.cpp
tests/: CMakeLists.txt  validate_solutions.cpp  validate_upper_bounds.cpp
tsp/: CMakeLists.txt
tsp/include/tsp/: Christofides.h  TSPSolver.h
tsp/src/: Christofides.cpp  TSPSolver.cpp
(+1428 files in other folders)
