add_executable(test_validate_solutions validate_solutions.cpp)
target_link_libraries(test_validate_solutions ${MOWING_LIBRARIES})
target_include_directories(test_validate_solutions PUBLIC ${MOWING_INCLUDE_DIRS})
set_target_properties(test_validate_solutions PROPERTIES LINKER_LANGUAGE CXX)


add_executable(test_validate_upper_bounds validate_upper_bounds.cpp)
target_link_libraries(test_validate_upper_bounds ${MOWING_LIBRARIES})
target_include_directories(test_validate_upper_bounds PUBLIC ${MOWING_INCLUDE_DIRS})
set_target_properties(test_validate_upper_bounds PROPERTIES LINKER_LANGUAGE CXX)